# chronometer_mini_rpi

./: .gitignore  init.sql  pyproject.toml
src/chronometer_mini_rpi/: main.py
src/chronometer_mini_rpi/rest_api/routers/: schedule.py
src/chronometer_mini_rpi/scheduler/: handler.py  queue.py  runtime.py  shedules.json
